# Cplusplus

./: .gitignore
firstprogram/: CMakeLists.txt  main.cpp
firstprogram/src/OOP/: MyClasstwo.cpp  MyClasstwo.h  myClassone.cpp  myClassone.h
firstprogram/src/carfactory/: carfactory.cpp  carfactory.h
firstprogram/src/constants/: literals.cpp  literals.h
firstprogram/src/largestnumber/: largest_number.cpp  largest_number.h
firstprogram/src/method/: method.cpp  method.h
firstprogram/src/operators/: assigmentoperator.cpp  assigmentoperator.h
firstprogram/src/petrol_consumption/: petrol_consumption.cpp  petrol_consumption.h
firstprogram/src/random_number/: random_number.cpp  random_number.h
firstprogram/src/simple_output/: simple_output.cpp  simple_output.h
firstprogram/src/strings/: strings.cpp  strings.h
firstprogram/src/variables/: scopeofvars.cpp  scopeofvars.h  simple_math.cpp  simple_math.h
